--- a/webdev_class_code/ajjames.html
+++ b/webdev_class_code/ajjames.html
@@ -1,9 +1,15 @@
 <html>
 <head>
 	<title>AJ James</title>
-	<link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
+
+img 
+	{
+	float:right;
+	margin-left: 30px;
+	}
 
 	</style>
 
@@ -15,5 +21,7 @@
 <li>
 	<table><a href="apprenticeprodigiesweb.html">Apptentice Prodigies</a></table>
 
-	<p>AJ is the youngest of the group at 13 but is the second calmist and a very devious person. AJ was born on March 6th 2000. She has an older brother named Nathan, and older sister named Franchesca, and a younger brother named Soloman. She is funny and very trusting. A few of her hobbies are riding horses, partisipating in the Civil Air Patrol, and reading a ton. Some of her favorite book series are, <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> and <i>"Dragons in our Midts."</i> For the Ranger's Apprentice series she has her own character. She is the daughter of Sir Horace and Princess Cassandra. Her name is Brianna Aultman. For the Inhearitance Cycle she also has a character and is the daughter of Eragon and Arya. Her name is Flynn Aryasdaughter. She enjoys hanging out with her friends and teasing her older sister. All four of the other Apprentice Prodigies love her!</p>
-	<img src="img_7612.jpg">
+
+	<p>AJ is the youngest of the group at 13 but is the second calmist and a very devious person. <img src="img_7612.jpg"width="404" height="304"> AJ was born on March 6, 2000. She has an older brother named Nathan, and older sister named Franchesca, and a younger brother named Soloman. She is funny and very trusting. A few of her hobbies are riding horses, partisipating in the Civil Air Patrol, and reading a ton. Some of her favorite book series are, <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> and <i>"Dragons in our Midts."</i> For the Ranger's Apprentice series she has her own character. She is the daughter of Sir Horace and Princess Cassandra. Her name is Brianna Aultman. For the Inhearitance Cycle she also has a character and is the daughter of Eragon and Arya. Her name is Flynn Aryasdaughter. She enjoys hanging out with her friends and teasing her older sister. All four of the other Apprentice Prodigies love her!</p>
+	
+	
