--- a/webdev_class_code/apprenticeprodigiesweb.html
+++ b/webdev_class_code/apprenticeprodigiesweb.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Apprentice Prodigies</title>
-	<link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
+<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 	
@@ -26,5 +26,5 @@
 			<a href="theresaandary.html">Theresa Andary</a>
 		</li>
 
-		<img src="img_7610.jpg">
+		<img src="img_7610.jpg" width="404" hight="404">
 	</body>
