--- a/webdev_class_code/franchescajames.html
+++ b/webdev_class_code/franchescajames.html
@@ -1,9 +1,15 @@
 <html>
 <head>
 	<title>Franchesca James</title>
-	<link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
+
+img 
+	{
+	float:right;
+	margin-left: 30px;
+	}
 
 	</style>
 
@@ -15,5 +21,5 @@
 	<li>
 		<table><a href="apprenticeprodigiesweb.html">Apptentice Prodigies</a></table>
 
-		<p>Franchesca is the second oldest at 16. She was born on September 17, 1997. She has an older brother named Nathan, and younger sister named AJ, and a younger brother named Soloman. She is the most level headed of the Apprentice Prodigies and keeps the rest of us in line... mostly. Her Hobbies include: horseback riding, reading, dutch dancing, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> and <i>"Hunger Games Trilogy."</i> Franchesca has created characters for the Ranger's Apprentice series, and the Inhearitance Cycle. For Ranger's Apprentice she is Leah Organa an orphan who becomes an apprentice to Lady Alyss, a diplomat. For the Inhearitance Cycle she is Mara Aryasdaughter, she is the daughter of Eragon and Arya. Franchesca is a Dutch Dancer during Tulip Time. Her partner is her friend Theresa Andary. Franchesca is the girl and Theresa is the boy. The Apprentice Prodigies simply could not exist without Franchesca James.</p>
-		<img src="014 (3).jpg">
+		<p>Franchesca is the second oldest at 16. She was born on September 17, 1997. <img src="014 (3).jpg" width="304" height="404"> She has an older brother named Nathan, and younger sister named AJ, and a younger brother named Soloman. She is the most level headed of the Apprentice Prodigies and keeps the rest of us in line... mostly. Her Hobbies include: horseback riding, reading, dutch dancing, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> and <i>"Hunger Games Trilogy."</i> Franchesca has created characters for the Ranger's Apprentice series, and the Inhearitance Cycle. For Ranger's Apprentice she is Leah Organa an orphan who becomes an apprentice to Lady Alyss, a diplomat. For the Inhearitance Cycle she is Mara Aryasdaughter, she is the daughter of Eragon and Arya. Franchesca is a Dutch Dancer during Tulip Time. Her partner is her friend Theresa Andary. Franchesca is the girl and Theresa is the boy. The Apprentice Prodigies simply could not exist without Franchesca James.</p>
+		
