--- a/webdev_class_code/amberstorteboom.html
+++ b/webdev_class_code/amberstorteboom.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<title>Amber Storteboom</title>
-<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
+	
+	<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
 
@@ -21,6 +22,8 @@ img
 	<li>
 		<a href="apprenticeprodigiesweb.html">Apprentice Prodigies</a>
 
-		<p>Amber is the second youngest of the group at 14. She was born on June 7, 1999. <img src="erin hawking2.jpg" width="304" height="404"> Amber is the oldest of four. She has two younger brothers, Ryan and Micah, and a younger sister named Mia. Amber is quite until you get to know her and even then she doesn't talk a lot. Her hobbies include reading, writing, riding horses, sword fighting, archery, climbing trees, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> <i>"Hunger Games Trilogy"</i> and <i>"Dragons in our Midts."</i> Amber has different characters which each reflect her own personality. For Hunger Games her character is Trilliam Hawthorn the daughter of the character Gale Hawthorn. For Ranger's Apprentice her character is Erin Hawking, an orphan who becomes apprentice to the Ranger Halt O'Carrick. For the Inhearitance Cycle her character is Thara Eragonsdaughter, the daughter of Eragon and Arya. Amber is very active in her church and attends youth group and several mission trips. Every year she goes to a christian summer camp called "Camp Roger" Amber is a very important part of the Apprentice Prodigy band.</p>
+		<img src="erin hawking2.jpg" width="304" height="404">
+
+		<p>Amber is the second youngest of the group at 14. She was born on June 7, 1999.  Amber is the oldest of four. She has two younger brothers, Ryan and Micah, and a younger sister named Mia. Amber is quite until you get to know her and even then she doesn't talk a lot. Her hobbies include reading, writing, riding horses, sword fighting, archery, climbing trees, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> <i>"Hunger Games Trilogy"</i> and <i>"Dragons in our Midts."</i> Amber has different characters which each reflect her own personality. For Hunger Games her character is Trilliam Hawthorn the daughter of the character Gale Hawthorn. For Ranger's Apprentice her character is Erin Hawking, an orphan who becomes apprentice to the Ranger Halt O'Carrick. For the Inhearitance Cycle her character is Thara Eragonsdaughter, the daughter of Eragon and Arya. Amber is very active in her church and attends youth group and several mission trips. Every year she goes to a christian summer camp called "Camp Roger" Amber is a very important part of the Apprentice Prodigy band.</p>
 
 		
