--- a/webdev_class_code/apprenticeprodigiesweb.html
+++ b/webdev_class_code/apprenticeprodigiesweb.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 	<title>Apprentice Prodigies</title>
-<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
-<link rel="stylesheet" type="text/css" href="style.css">
+	
+	<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 	
-	<u><b>These are the Apprentice Prodigies</b></u>
+	<u><b>The Apprentice Prodigies</b></u>
 	
-	<p>Carolyn, Amber, Theresa, AJ, and Franchesca</p>
 
 	<li>
 			<a href="carolynjoung.html">Carolyn Joung</a> 
