--- a/webdev_class_code/carolynjoung.html
+++ b/webdev_class_code/carolynjoung.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<title>Carolyn Joung</title>
-<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
+	
+	<link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
 
@@ -21,6 +22,8 @@
 	<li>
 		<table><a href="apprenticeprodigiesweb.html">Apptentice Prodigies</a></table>
 
-		<p>Carolyn Joung is in the middle of the ages of the Apprentice Prodigies at 15. <img src="danielle griffin.jpg"> She was born in Taipei, Tiwan on November 2, 1997. She has two older brothers named Nick and Benjy, and a younger brother named Jack. Carolyn prides herself on her scarcasim and her ability to make the rest of the Apprentice Prodigies laugh. Her hobbies include reading, writing, horseback riding, sewing, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> and <i>"Hunger Games Trilogy."</i> Like the other Prodigies Carolyn has different characters for several of her favorite book series. Her Ranger's Apprentice character is Danielle Griffin, an orphan who becomes an apprentice to Ranger Gilan. Her Inhearitance Cycle character is Allie Eragonsdaughter the daughter of Eragon and Arya. Her Hunger Games character is Seth Hawthorn the son of Gale Hawthorn. Carolyn is a key part in the Apprentice Prodigy band.</p>
+		<img src="danielle griffin.jpg">
+
+		<p>Carolyn Joung is in the middle of the ages of the Apprentice Prodigies at 15.  She was born in Taipei, Tiwan on November 2, 1997. She has two older brothers named Nick and Benjy, and a younger brother named Jack. Carolyn prides herself on her scarcasim and her ability to make the rest of the Apprentice Prodigies laugh. Her hobbies include reading, writing, horseback riding, sewing, and hanging out with friends. Some of her favorite book series' are <i>"Ranger's Apprentice"</i> <i>"The Inhearitance Cycle"</i> <i>"Lord of the Rings"</i> and <i>"Hunger Games Trilogy."</i> Like the other Prodigies Carolyn has different characters for several of her favorite book series. Her Ranger's Apprentice character is Danielle Griffin, an orphan who becomes an apprentice to Ranger Gilan. Her Inhearitance Cycle character is Allie Eragonsdaughter the daughter of Eragon and Arya. Her Hunger Games character is Seth Hawthorn the son of Gale Hawthorn. Carolyn is a key part in the Apprentice Prodigy band.</p>
 
 		
